2004-07-16  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/bugs/bugs.xsl:
	  add blocker bugs
	* src/htdocs/news/news.xml:
	  fix typo
	* src/htdocs/releases/gst-ffmpeg/0.8.1.xml:
	  add release notes

2004-07-12  David I. Lehn <dlehn@users.sourceforge.net>

	* src/htdocs/index.xsl:
	* src/htdocs/news/Makefile.am:
	* src/htdocs/news/news.xsl:
	* src/htdocs/news/news2atom.xsl:
	* src/htdocs/news/news2rss-1.0.xsl:
	Generate news feed

2004-07-11  David I. Lehn <dlehn@users.sourceforge.net>

	* ChangeLog:
	Starting off a www module ChangeLog