@@ -50,7 +50,7 @@ very fast colorspace conversion elements.
     </description>
     <maintainer>GStreamer Team</maintainer>
     <versions>
-      <stable>0.8.0</stable>
+      <stable>0.8.1</stable>
     </versions>
   </module>
 
